文件上传异步处理，加数据判断，防止脏数据